2003-08-10  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.c (g_getenv): Don't use a cache of variable name to
	value mappings on Win32, as that breaks g_setenv() and
	g_unsetenv(). Only call ExpandEnvironmentStrings() if necessary,
	and in that case return a quarkified string. It is still
	questionable how necessary expanding embedded environment variable
	references is. Possibly the whole Win32-specific g_getenv()
	implementation could be removed. (#119520)

2003-08-08  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add g_once_impl.

	* glib/gutils.c (g_setenv): Fix syntax error in the !HAVE_SETENV
	case.

2003-08-08  Matthias Clasen  <maclas@gmx.de>

	* tests/env-test.c (main): Remove a test for getenv() behaviour which isn't specified by SUS
	and doesn't work on Solaris.

2003-08-07  Matthias Clasen  <maclas@gmx.de>

	* tests/env-test.c: Add tests for '=' in names and values.

	* glib/gutils.c (g_setenv, g_unsetenv): Check that the variable name doesn't contain '='. Add a
	declaration for environ.  (#119338)

	* acinclude.m4: Tighten the snprintf() test to check behaviour on zero-size buffers.  (#106091)

	* tests/patterntest.c: Specify test strings in UTF-8, remove all charset conversion.
	Replace the NOISY define by a cmdline arg --noisy.   (#115757)

Thu Aug  7 15:01:09 2003  Owen Taylor  <otaylor@redhat.com>

	* m4macros/glib-gettext.m4: Set $LIBS to include
	-lintl when checking for dcgettext and 
	_nl_msg_cat_cntr. (Tim Mooney, #119171)

Thu Aug  7 14:15:44 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_idle_source_new): Make the default priority
	for idle sources G_PRIORITY_DEFAULT_IDLE as anybody would
	expect and document that. (#114461, reported by Andy Wingo)

2003-08-06  Noah Levitt  <nlevitt@columbia.edu>

	* tests/casemap.txt:
	* tests/gen-casemap-txt.pl: Add test for special case not at inital
	position in the string, the bug just fixed. (#118957)

2003-08-05  Noah Levitt  <nlevitt@columbia.edu>
